fix overflow issue carousel and fix hover card

--- a/src/components/carousel/CarouselComponent.scss
+++ b/src/components/carousel/CarouselComponent.scss
@@ -1,5 +1,5 @@
 .react-multi-carousel-list {
-  padding: 0.3rem 0 0 1.1rem;
+  padding: 0.3rem 0 0
 }
 
 .carousel {
@@ -7,5 +7,6 @@
 }
 
 .react-multi-carousel-list {
-  overflow: visible;
+  padding: 3rem 0 3rem 1.1rem;
+  margin: -3rem 0;
 }
